--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,19 @@
 <html>
    
    <head>
+   	<!--angularjs libs-->
       <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js"></script> 
+      <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular-route.min.js"></script> 
+    <!--angularjs libs-->
+
+    <!--app js-->
       <script src = "./scripts/myapp.js"></script> 
-      <script src = "./scripts/controller/PrimaryController.js"></script> 
+      <script src = "./scripts/controller/NameController.js"></script> 
+    <!--app js-->
    </head>
-   
 
 	<body ng-app = "myapp"> 
-		<div ng-include = "'views/main.html'"> 
+		<div id"main-div" ng-view>nothing</div>
 		</div>
    </body>
 </html>
