--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,15 @@
    	<!--angularjs libs-->
       <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js"></script> 
       <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular-route.min.js"></script> 
+      <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular-resource.min.js"></script> 
     <!--angularjs libs-->
 
     <!--app js-->
       <script src = "./scripts/myapp.js"></script> 
+      <script src = "./scripts/service/ConstService.js"></script> 
+      <script src = "./scripts/service/HelloService.js"></script> 
       <script src = "./scripts/controller/NameController.js"></script> 
+      <script src = "./scripts/controller/RequestController.js"></script> 
     <!--app js-->
    </head>
 
